<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">课堂在线</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">课程管理系统!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="user_type_teacher">教  师</string>
    <string name="user_type_student">学  生</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="title_activity_course_add">CourseAddActivity</string>
    <string name="title_activity_password_change">PasswordChangeActivity</string>
    <string name="title_activity_course_info">CourseInfoActivity</string>
    <string name="title_activity_TMentionName">TMentionNameActivity</string>
    <string name="MentionName">点名</string>
    <string name="TMentionName">课堂点名</string>
    <string name="SelectCourse">选择课程</string>
    <string name="MentionNameTime">点到时间</string>
    <string name="MentionNameWeeks">点到周数</string>
    <string name="teststring">你还没有选择点名信息</string>
    <string name="TeacherCourseInfo">教师课程信息</string>
    <string name="Course_Week">课程周数</string>
    <string name="Course_time">课程时间选择</string>
    <string name="finish">完成</string>
    <string name="Dianming">点名</string>
    <string name="title_activity_homework_manage_course_select">HomeworkManageCourseSelectActivity</string>
    <string name="title_activity_homework_manage_course_select_info">HomeworkManageCourseSelectInfoActivity</string>
    <string name="title_activity_homework_manage_job_info">HomeworkManageJobInfoActivity</string>
    <string name="title_activity_student_check_homework">StudentCheckHomeworkActivity</string>
    <string name="title_activity_student_check_course_homework">StudentCheckCourseHomeworkActivity</string>
    <string name="title_activity_home_work_image">HomeWorkImageActivity</string>
    <string name="title_activity_homework_image">HomeworkImageActivity</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="title_activity_take_photo">TakePhotoActivity</string>
    <string name="title_activity_up_load">UpLoadActivity</string>
    <string name="title_activity_image_view">ImageViewActivity</string>
    <string name="title_activity_net">NetActivity</string>
    <string name="title_activity_homework_course_csubmit_info">HomeworkCourseCSubmitInfoActivity</string>
    <string name="title_activity_student_hmupload">StudentHMUploadActivity</string>
    <string name="title_activity_student_check_class_homework">StudentCheckClassHomeworkActivity</string>
    <string name="title_activity_student_check_class_homework_info">StudentCheckClassHomeworkInfoActivity</string>
    <string name="title_activity_student_check_class_homework_info_2">StudentCheckClassHomeworkInfo_2Activity</string>
    <string name="title_activity_upload_audio">UploadAudioActivity</string>
    <string name="title_activity_audio_player">AudioPlayerActivity</string>
    <string name="title_activity_student_course">StudentCourseActivity</string>
    <string name="title_activity_student_of_course_add">StudentOfCourseAddActivity</string>
    <string name="title_activity_coursetable">CoursetableActivity</string>
    <string name="title_activity_welcome_stu">WelcomeStuActivity</string>
    <string name="title_activity_evaluate">EvaluateActivity</string>
    <string name="title_activity_evaluate_add">EvaluateAddActivity</string>
    <string name="title_activity_course_edit">CourseEditActivity</string>
    <string name="study_progress">课程</string>
    <string name="test_score">分数</string>
    <string name="fee_pay">费用</string>
    <string name="msg_phone">联系人:</string>
    <string name="msg_content">编辑短信</string>
    <string name="msg_send">发送</string>
    <string name="msg_return">返回</string>
    <string name="title_activity_tab_message">TabMessageActivity</string>
    <string name="title_activity_message_info">MessageInfoActivity</string>
    <string name="title_activity_evaluate_get">EvaluateGetActivity</string>
    <string name="text1">Hello</string>
    <string name="text2">Hello</string>
    <string name="text3">Hello</string>
    <string name="text4">Hello</string>
    <string name="title_activity_audio_upload_operation">AudioUploadOperationActivity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_course_time">CourseTimeActivity</string>

    <!--loginString -->
    <string name="title_main">课程        管理系统欢迎你</string>
    <string name="hello">Hello World, Date!</string>
    <string name="strInputAccHint">输入帐号</string>
    <string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="opt_remember">记住密码</string>
    <string name="login">登 录</string>
    <string name="opt_hideLogin">隐身登录</string>
    <string name="opt_silent">静音登录</string>
    <string name="opt_openVibra">开启振动</string>
    <string name="opt_acceptGroupMsg">接收群消息</string>
    <string name="classmention">点名</string>
    <string name="random_ask">提问</string>
    
    <string name="back">返回</string>
    <string name="confirm">提交</string>
    <string name="signin">开启</string>
</resources>
