<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f1eef5"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#171a1f"
        android:textColor="#fff"
        android:text="@string/msg_phone"
         />
    
    <!-- 电话号码输入 -->

    <TextView
        android:id="@+id/msg_phone"
        android:padding="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#6b6b6b"
         />

    <TextView
        android:id="@+id/msg_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.03"
        android:background="#ffffff"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:padding="5dp"
        android:text="@string/msg_content" />

    <!-- 短信内容编辑 -->

    <EditText
        android:id="@+id/msg_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_edit_normal"
        android:gravity="left"
        android:minLines="3" />
    <!-- 可3行显示 -->
    <!-- 设置左边输入 -->

    <Button
        android:id="@+id/msg_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_style_one_disabled"
        android:layout_gravity="right"
        android:layout_margin="5dip"
        android:text="@string/msg_send" />

</LinearLayout>